services/datalake/superset/superset-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
  namespace: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
  template:
    metadata:
      labels:
        app: superset
    spec:
      containers:
      - name: superset
        image: apache/superset:4.0.2
        ports:
        - containerPort: 8088
        volumeMounts:
        - name: config-volume
          mountPath: /app/superset_config.py
          subPath: superset_config.py
      volumes:
      - name: config-volume
        configMap:
          name: superset-config
