services/datalake/superset/superset-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-postgresql
  namespace: superset
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: superset-postgresql
  type: ClusterIP
