services/datalake/superset/superset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: superset
spec:
  type: ClusterIP
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: web
  selector:
    app: superset
